--- a/css/style3.css
+++ b/css/style3.css
@@ -240,9 +240,10 @@ body > div > button.carousel-control-prev {
   background-color: #8135cc;
   font-family: "DM Sans", sans-serif;
 }
-.card > img {
-  width: 100%;
-  height: 100%;
+
+.card-img-top{
+    width: 264px;
+    height: 264px;
 }
 
 .btn3 {
